--- a/packages/create-cosmo-widget/templates/template-vue-ts-tailwind/src/style.css
+++ b/packages/create-cosmo-widget/templates/template-vue-ts-tailwind/src/style.css
@@ -10,6 +10,7 @@ body {
   width: 100%;
   height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .header {
